<resources>
    <string name="app_name">Iteso Products Examen 2</string>
    <string name="action_logout">Log Out</string>
    <string name="action_privacy">Privacy Policy</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="section1">Technology</string>
    <string name="section2">Home</string>
    <string name="section3">Electronics</string>

    <string name="activity_splash_label">GETTING READY FOR YOU</string>

    <string name="activity_login_hint_user">Introduce user</string>
    <string name="activity_login_hint_pwd">Introduce password</string>
    <string name="activity_login_login">Login</string>

    <string name="activity_product_save">Save</string>
    <string name="activity_product_cancel">Cancel</string>
    <string name="activity_product_hint_title">Introduce title</string>
    <string name="activity_product_hint_store">Introduce store</string>
    <string name="activity_product_hint_location">Introduce location</string>
    <string name="activity_product_hint_phone">Introduce phone</string>

    <string name="item_share">SHARE</string>
    <string name="item_more">SEE MORE</string>

    <string-array name="images">
        <item>AlienWare</item>
        <item>Mac</item>
        <item>Micro</item>
        <item>Pillows</item>
        <item>Refrigerator</item>
        <item>Sheets</item>
    </string-array>
</resources>
