<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <ImageView
        android:id="@+id/activity_product_image"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_product_image"
        android:contentDescription="@string/app_name"
        android:scaleType="centerInside"
        android:src="@drawable/mac"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="@dimen/activity_product_padding">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/activity_product_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_product_hint_title"
                android:inputType="text"
                android:imeOptions="actionNext"/>
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/activity_product_store"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_product_hint_store"
                android:inputType="text"
                android:imeOptions="actionNext"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/activity_product_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_product_hint_location"
                android:inputType="text"
                android:imeOptions="actionNext"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/activity_product_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_product_hint_phone"
                android:inputType="phone"
                android:imeOptions="actionDone"/>
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/activity_product_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/activity_product_save"/>

        <Button
            android:id="@+id/activity_product_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/activity_product_cancel"/>
    </LinearLayout>
</LinearLayout>

